feat:adjust index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Haii Renataa cantikk!</title>
+  <title>Haii Ghifaa cantikk!</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body, html { height: 100%; overflow: hidden; font-family: 'Comic Sans MS', cursive; }
@@ -82,7 +82,7 @@
 </head>
 <body>
   <canvas id="heart-canvas"></canvas>
-  <h1>Halo bubu sayangku 💕<br>tolong klik ini yaaa cantik💖 </h1>
+  <h1>Halo baee sayangku 💕<br>tolong klik ini yaaa cantik💖 </h1>
   <button class="btn-start" onclick="startTransition()">klik ini sayang💖</button>
 
   <!-- Overlay Transition -->
