--- a/ucapan.html
+++ b/ucapan.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Untukmu, MY LOVE ❤️</title>
+  <title>Buat bae gunduttt ❤️</title>
   <style>
     body {
       margin: 0;
@@ -152,6 +152,28 @@
       background-color: #ff85c1;
     }
 
+    /* Tombol WhatsApp */
+    #whatsappButton {
+      display: none;
+      margin-top: 20px;
+      text-align: center;
+    }
+
+    #whatsappButton a {
+      background-color: #25D366;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 25px;
+      text-decoration: none;
+      font-size: 16px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+      display: inline-block;
+    }
+
+    #whatsappButton a:hover {
+      background-color: #20b358;
+    }
+
     /* Menyesuaikan ukuran teks untuk perangkat kecil */
     @media (max-width: 600px) {
       h1 {
@@ -179,8 +201,15 @@
 
   <!-- Kontainer isi -->
   <div class="ucapan-container">
-    <h1>Untuk Renata Eka Suci Ramadhita yang paling akuu sayang 💖</h1>
+    <h1>Untuk Ghifa Attaya Ulhaq 💖</h1>
     <div class="typewriter" id="typewriterText"></div>
+
+    <!-- Tombol WhatsApp -->
+    <div id="whatsappButton">
+      <a href="https://wa.me/6289669643272?text=aku%20disini%20mau%20menjawab%20pertanyaan%20mu." target="_blank">
+        💬 Disini yah jawabnya
+      </a>
+    </div>
   </div>
 
   <!-- Tombol kontrol musik -->
@@ -189,31 +218,42 @@
   <!-- Script -->
   <script>
     const text = `
-Sayangku cintakuu maniskuuu...
+Selamat 20 + utas untuk Ghifa Attaya Ulhaq 💖
 
-Dari sekian banyak kata yang bisa aku tulis, hanya satu yang selalu pengen aku sampeinn:
-Aku sayangggggg banget sama bubu lebih dari apapunnnn.
+Aku mau ngucapin lagi buat kamu biar aku jadi orang terakhir yang ngucapin ulang tahun mu yang ke 21 ini hehe.
+Aku ngga jago bikin surat kek gini, ngga kaya kamu yang jago ngerangkai kata buat disampaikan ke aku. Tapi ku usahain
+bait demi bait, kalimat demi kalimat dan kata demi kata aku buat sendiri yah dengan keterbatasan aku.
 
-Bubuuuuu alasan aku senyum senyum sendirii hehee maaaf bubuuu bukan berarti akuu gilaa yaaa.
-Bubuu jugaa bikin aku semangat di saat aku capee .
-Bubuuu jugaa tempat terindah untuk pulang.
+Aku tau aku emang bukan pacar yang baik buat bae, masih suka nakal, masih suka bikin bae nangis berhari hari.
+Aku juga labil atas keputusan ku sendiri,  kadang masih suka marah marah gajelas ke bae. Tapi dibalik itu aku ada
+rencana yang baik buat kita kedepanya, memang aku jarang cemburu ke bae itu memang sifat buruk ku, tapi ada sifat buruku yang lain
+yaitu aku takut ga bisa bikin kamu bikin lebih bahagia. Uang emang bukan sumber utama kebahagiaan, tapi agar aku dan kamu bahagia
+aku harus bisa cari uang dan kita bisa pergi kemana aja yang kamu. Bahagia ngga kalo kita bisa jalan jalan bareng?.
 
-Aku bersyukur sekali allah mempertemukan kita hehehehe...
-Setiap sama kamu aku merasa dunia ini terasa lebih lembut, lebih hangat, lebih berarti, satu lagii bub lebihh romantiss hehhe.
+Aku tau cara aku ngelakuin semua hal masih salah. Masih hilang arah, masih labil dan lain lain. Aku minta maaf atas kesalahanku, 
+atas kebodohanku juga. Aku sayang dan cinta sam kamu dan aku mau kamu bahagia. Dulu aku mikir aku mau kamu bahagia walaupun
+ga sama aku. Tapi setengah tahun kulewatin malah aku yang hampir mati. Rada lebay tapi mungkin itu ungkapan yang cocok hehe.
 
-Semoga bubu bahagiaa terus yaaa,akuu pengenn banget lihat bubu bahagia.
-Aku juga pengen terus jadi tempat bersandar bubu, pelindung bubuu disaat bubuu rapuh.
-Aku pengen terus sama bubuuu, lewati hal senang maupun susah.
+Maaf beberapa waktu itu aku ganggu kamu yang sibuk dengan kegiatan mu. Aku gatau kamu sudah mencapai titik benci sama aku atau tidak.
+yang aku tau aku bisa bukin kamu sayang sama aku, Bagaimanapun caranya, aku mau usahain hal hal itu buat kamu.
+Aku tau kmu tipe orang yang jangan dengerin omongan lain, tapi aku mau denger nantinya klo kamu beruntung punya aku. itu
+adalah satu wishlist yanng aku mau capai dann terus pertahain sama kamu.
 
-Jika suatu hari bubuu ngerasa lelah, jangan lupa... ada aku di sini yaang, mencintaimu tanpa ada pause nyaa alias tidak ada jeda yang.
-Menjaga bubuu dari jauh ataupun deket sekalipun. Dalam diam atau dalam peluk heheheheh.
+Udah panjang aja yah, sekali lagi aku minta maaf bae. Aku udah jahat sama bae, udah bikin bae nangis, udah bikin bae kesel,
+udah bikinn bae bingung dengan aku. Aku sayang kamu, aku mau lebih nemenin kamu setelah ini. Nemenin tiap kerja kerasmu sampai
+diwaktu istirahatmu. Aku gatau kamu mau ketemu aku lagi atau ngga, jadi aku bikin text ini. kasih aku tau keputusanmu dengan hal
+yang ku berikan itu yah. Aku sayang kamu dan aku mau mengusahakan hal hal baik denganmu kedepanya. Orang bilang itu promise ring.
+Tapi aku mau bilang itu adalah bukti kalau aku bertekad mau berusaha, karena katanya gaboleh janji tapi ku lapisin kalimat tersebut
+dengan Insya Allah.
 
-Bubuuu adalah satu-satunya yang pengen aku jaga. Yang pengen aku bahagiakan. apalagi kalau nafkahin ihhh pengen banget.
+itu aja bae yang mau aku ngomongin, aku juga ada beberapa hal buruk yang ku dengar tapi aku gamau nuangin disini. Selebihnnya
+tinggal kamu yang memutuskan apa kamu menerima aku.
 
-Terima kasih sayang sudah hadir di hidup akuuu
+Untuk yang tersayang 💖
 
-LOVEE YOUU SAYAAANG.💖
+Ghifa Attaya Ulhaq
 `;
+
     let i = 0;
     const speed = 50;
     function typeWriter() {
@@ -221,6 +261,9 @@ LOVEE YOUU SAYAAANG.💖
         document.getElementById("typewriterText").innerHTML += text.charAt(i);
         i++;
         setTimeout(typeWriter, speed);
+      } else {
+        // Tampilkan tombol WA setelah selesai ketik
+        document.getElementById("whatsappButton").style.display = "block";
       }
     }
     typeWriter();
