--- a/wellcome.html
+++ b/wellcome.html
@@ -108,17 +108,17 @@
   <!-- Konten Utama -->
   <div class="container">
     <img src="img/couple.jpg" alt="Foto Berdua" class="photo"/>
-    <h1>Hallo bubuuu sayangku cintaku maniskuuu ❤️</h1>
+    <h1>Aloo Gundutt akuhh ❤️</h1>
     <p>Aku punya sesuatuu buat kamuuu...</p>
-    <p>Btw maaf yaa sayaang, aku sering bikin kamu kesel. Tapi aku sayang banget sama bubuuu 💖</p>
-    <p>Love you more sayaaangkuuu! ❤️</p>
-    <p>Nanti setelah bubu pencet tombol dibawah,Bubu scroll lagii yaa</p>
+    <p>Btw maaf yaa sayaang, keknya kamu udah kesel bgt sama akuu 💖</p>
+    <p>Dibaca yahhh ❤️</p>
+    <p>Nanti setelah bae baca, bae klik tombol paling bawah. Dibaca SENDIRI YA😠</p>
   </div>
 
   <button class="love-button" onclick="showLove()">coba klik ini terus bakal ada yang muncul ❤️</button>
 
   <div class="gallery">
-    <h2>Kenangan Kita 📸</h2>
+    <h2>Ini aku sama bae 📸</h2>
     <img src="img/galeri1.jpg" alt="Galeri 1">
     <img src="img/galeri2.jpg" alt="Galeri 2">
     <img src="img/galeri3.jpg" alt="Galeri 3">
