--- a/ucapan.html
+++ b/ucapan.html
@@ -225,26 +225,33 @@ Aku ngga jago bikin surat kek gini, ngga kaya kamu yang jago ngerangkai kata bua
 bait demi bait, kalimat demi kalimat dan kata demi kata aku buat sendiri yah dengan keterbatasan aku.
 
 Aku tau aku emang bukan pacar yang baik buat bae, masih suka nakal, masih suka bikin bae nangis berhari hari.
-Aku juga labil atas keputusan ku sendiri,  kadang masih suka marah marah gajelas ke bae. Tapi dibalik itu aku ada
-rencana yang baik buat kita kedepanya, memang aku jarang cemburu ke bae itu memang sifat buruk ku, tapi ada sifat buruku yang lain
-yaitu aku takut ga bisa bikin kamu bikin lebih bahagia. Uang emang bukan sumber utama kebahagiaan, tapi agar aku dan kamu bahagia
-aku harus bisa cari uang dan kita bisa pergi kemana aja yang kamu. Bahagia ngga kalo kita bisa jalan jalan bareng?.
+Aku juga labil atas keputusan ku sendiri, kadang masih suka marah marah gajelas ke bae. Tapi dibalik itu aku ada
+rencana yang baik buat kita kedepanya yang mungkin kalau dilakuin emang harus sakit dulu ndut, memang aku jarang cemburu ke bae 
+itu memang sifat buruk ku, tapi ada sifat buruku yang lain yaitu aku takut ga bisa bikin kamu bikin lebih bahagia. 
+Uang emang bukan sumber utama kebahagiaan, tapi agar aku dan kamu bahagia
+aku harus bisa cari uang dan kita bisa pergi kemana aja yang kamu. Bahagia ngga kalo kita bisa jalan jalan bareng?. Tapi aku sedih
+bae sekarang gamau keliling sama aku, setiap diajak selalu nolak. Aku ngerti itu karena salah aku juga dan aku menyesal membuat bae 
+sampai dititik seperti itu.
 
 Aku tau cara aku ngelakuin semua hal masih salah. Masih hilang arah, masih labil dan lain lain. Aku minta maaf atas kesalahanku, 
-atas kebodohanku juga. Aku sayang dan cinta sam kamu dan aku mau kamu bahagia. Dulu aku mikir aku mau kamu bahagia walaupun
-ga sama aku. Tapi setengah tahun kulewatin malah aku yang hampir mati. Rada lebay tapi mungkin itu ungkapan yang cocok hehe.
+atas kebodohanku juga. Aku sayang dan cinta sama kamu dan aku mau kamu bahagia. Dulu aku mikir aku mau kamu bahagia walaupun
+ga sama aku. Karena aku tau banyak hal yg gasuka menurut bae yang ada di aku. Tapi setengah tahun kulewatin malah aku yang hampir mati. 
+Rada lebay tapi mungkin itu ungkapan yang cocok hehe. Tapi aku udah mulai sadar kok bae, aku mulai benerin diri aku, mulai dari sholat aku,
+sifat ego ku, cara berfikir aku dan lain lain mulai dari sekecil apapun itu.
 
 Maaf beberapa waktu itu aku ganggu kamu yang sibuk dengan kegiatan mu. Aku gatau kamu sudah mencapai titik benci sama aku atau tidak.
-yang aku tau aku bisa bukin kamu sayang sama aku, Bagaimanapun caranya, aku mau usahain hal hal itu buat kamu.
+yang aku tau, aku bisa bikin kamu sayang sama aku, Bagaimanapun caranya, aku mau usahain hal hal itu buat kamu.
 Aku tau kmu tipe orang yang jangan dengerin omongan lain, tapi aku mau denger nantinya klo kamu beruntung punya aku. itu
-adalah satu wishlist yanng aku mau capai dann terus pertahain sama kamu.
+adalah satu wishlist yanng aku mau capai dann terus pertahain sama kamu. maaf aku labil, aku sayang sama kamu bey. aku mau kamu yang
+bisa merubah sifat aku ke pribadi yang lebih baik. Bukan cuman sifat tapi pola fikir aku. Aku tau ini egois bey, tapi aku mau kamu yang bilang
+"mau diulang 1000 kalipun aku tetep pilih kamu".
 
 Udah panjang aja yah, sekali lagi aku minta maaf bae. Aku udah jahat sama bae, udah bikin bae nangis, udah bikin bae kesel,
 udah bikinn bae bingung dengan aku. Aku sayang kamu, aku mau lebih nemenin kamu setelah ini. Nemenin tiap kerja kerasmu sampai
 diwaktu istirahatmu. Aku gatau kamu mau ketemu aku lagi atau ngga, jadi aku bikin text ini. kasih aku tau keputusanmu dengan hal
 yang ku berikan itu yah. Aku sayang kamu dan aku mau mengusahakan hal hal baik denganmu kedepanya. Orang bilang itu promise ring.
-Tapi aku mau bilang itu adalah bukti kalau aku bertekad mau berusaha, karena katanya gaboleh janji tapi ku lapisin kalimat tersebut
-dengan Insya Allah.
+Tapi aku mau bilang itu adalah bukti kalau aku bertekad mau berusaha berubah untuk lebih baik, karena katanya gaboleh janji tapi ku 
+lapisin kalimat tersebut dengan Insya Allah.
 
 itu aja bae yang mau aku ngomongin, aku juga ada beberapa hal buruk yang ku dengar tapi aku gamau nuangin disini. Selebihnnya
 tinggal kamu yang memutuskan apa kamu menerima aku.
