adding google analytics

--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
       50% { transform: translateY(-20px); }
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C6H61P97MD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C6H61P97MD');
+</script>
 </head>
 <body>
   <canvas id="heart-canvas"></canvas>
