--- a/ucapan.html
+++ b/ucapan.html
@@ -221,17 +221,16 @@
 Selamat 20 + utas untuk Ghifa Attaya Ulhaq 💖
 
 Aku mau ngucapin lagi buat kamu biar aku jadi orang terakhir yang ngucapin ulang tahun mu yang ke 21 ini hehe.
-Aku ngga jago bikin surat kek gini, ngga kaya kamu yang jago ngerangkai kata buat disampaikan ke aku. Tapi ku usahain
+Aku ngga jago bikin surat kek gini, ngga kaya bae yang jago ngerangkai kata buat disampaikan ke aku. Tapi ku usahain
 bait demi bait, kalimat demi kalimat dan kata demi kata aku buat sendiri yah dengan keterbatasan aku.
 
 Aku tau aku emang bukan pacar yang baik buat bae, masih suka nakal, masih suka bikin bae nangis berhari hari.
-Aku juga labil atas keputusan ku sendiri, kadang masih suka marah marah gajelas ke bae. Tapi dibalik itu aku ada
-rencana yang baik buat kita kedepanya yang mungkin kalau dilakuin emang harus sakit dulu ndut, memang aku jarang cemburu ke bae 
-itu memang sifat buruk ku, tapi ada sifat buruku yang lain yaitu aku takut ga bisa bikin kamu bikin lebih bahagia. 
-Uang emang bukan sumber utama kebahagiaan, tapi agar aku dan kamu bahagia
-aku harus bisa cari uang dan kita bisa pergi kemana aja yang kamu. Bahagia ngga kalo kita bisa jalan jalan bareng?. Tapi aku sedih
-bae sekarang gamau keliling sama aku, setiap diajak selalu nolak. Aku ngerti itu karena salah aku juga dan aku menyesal membuat bae 
-sampai dititik seperti itu.
+Aku juga labil atas keputusan ku sendiri, kadang masih suka marah marah gajelas ke bae. Tapi dibalik itu aku selalu
+mikir kedepan buat bae sama aku. Baiknya gimana walaupun kadang baik menurut aku belum tentu baik menurut bae, memang aku jarang 
+cemburu ke bae itu memang sifat buruk ku, tapi ada sifat buruku yang lain yaitu aku takut ga bisa bikin kamu bikin lebih bahagia. 
+Uang emang bukan sumber utama kebahagiaan, tapi agar aku dan kamu bahagia aku harus bisa cari uang dan kita bisa pergi kemana aja 
+yang kamu mau. Bahagia ngga kalo kita bisa jalan jalan bareng?. Tapi aku sedih bae sekarang gamau keliling sama aku, setiap diajak 
+selalu nolak. Aku ngerti itu karena salah aku juga dan aku menyesal membuat bae sampai dititik seperti inu.
 
 Aku tau cara aku ngelakuin semua hal masih salah. Masih hilang arah, masih labil dan lain lain. Aku minta maaf atas kesalahanku, 
 atas kebodohanku juga. Aku sayang dan cinta sama kamu dan aku mau kamu bahagia. Dulu aku mikir aku mau kamu bahagia walaupun
@@ -247,11 +246,13 @@ bisa merubah sifat aku ke pribadi yang lebih baik. Bukan cuman sifat tapi pola f
 "mau diulang 1000 kalipun aku tetep pilih kamu".
 
 Udah panjang aja yah, sekali lagi aku minta maaf bae. Aku udah jahat sama bae, udah bikin bae nangis, udah bikin bae kesel,
-udah bikinn bae bingung dengan aku. Aku sayang kamu, aku mau lebih nemenin kamu setelah ini. Nemenin tiap kerja kerasmu sampai
-diwaktu istirahatmu. Aku gatau kamu mau ketemu aku lagi atau ngga, jadi aku bikin text ini. kasih aku tau keputusanmu dengan hal
+udah bikin bae bingung dengan aku. Aku sayang kamu, aku mau lebih nemenin kamu setelah ini. Nemenin tiap kerja kerasmu sampai
+diwaktu istirahatmu. Aku gatau kamu mau ketemu aku lagi atau ngga, jadi aku bikin web ini. kasih aku tau keputusanmu dengan hal
 yang ku berikan itu yah. Aku sayang kamu dan aku mau mengusahakan hal hal baik denganmu kedepanya. Orang bilang itu promise ring.
-Tapi aku mau bilang itu adalah bukti kalau aku bertekad mau berusaha berubah untuk lebih baik, karena katanya gaboleh janji tapi ku 
+Tapi aku mau bilang itu adalah bukti kalau aku bertekad mau berusaha berubah untuk lebih baik bersama bae, karena katanya gaboleh janji tapi ku 
 lapisin kalimat tersebut dengan Insya Allah.
+
+oiya bae, aku berusaha juga kalo kedepannya lebih banyak hal positif yang akan kita lakuin bareng, aku mau kamu lebih bahagia
 
 itu aja bae yang mau aku ngomongin, aku juga ada beberapa hal buruk yang ku dengar tapi aku gamau nuangin disini. Selebihnnya
 tinggal kamu yang memutuskan apa kamu menerima aku.
