--- a/ucapan.html
+++ b/ucapan.html
@@ -226,31 +226,30 @@ bait demi bait, kalimat demi kalimat dan kata demi kata aku buat sendiri yah den
 
 Aku tau aku emang bukan pacar yang baik buat bae, masih suka nakal, masih suka bikin bae nangis berhari hari.
 Aku juga labil atas keputusan ku sendiri, kadang masih suka marah marah gajelas ke bae. Tapi dibalik itu aku selalu
-mikir kedepan buat bae sama aku. Baiknya gimana walaupun kadang baik menurut aku belum tentu baik menurut bae, memang aku jarang 
-cemburu ke bae itu memang sifat buruk ku, tapi ada sifat buruku yang lain yaitu aku takut ga bisa bikin kamu bikin lebih bahagia. 
-Uang emang bukan sumber utama kebahagiaan, tapi agar aku dan kamu bahagia aku harus bisa cari uang dan kita bisa pergi kemana aja 
-yang kamu mau. Bahagia ngga kalo kita bisa jalan jalan bareng?. Tapi aku sedih bae sekarang gamau keliling sama aku, setiap diajak 
-selalu nolak. Aku ngerti itu karena salah aku juga dan aku menyesal membuat bae sampai dititik seperti inu.
+mikir kedepan baiknya gimana buat bae sama aku. Walaupun kadang baik menurut aku belum tentu baik menurut bae. Waktu bae
+bilang ke aku mau pergi kesuatu tempat aku seneng banget, dan aku usahain buat kesitu sama bae. tapi emang waktu itu aku
+lagi sibuk sama magangnya aku, maafin aku bae. sekarang aku udah bisa, bae yang gamau aku ajak main huhu. 
 
-Aku tau cara aku ngelakuin semua hal masih salah. Masih hilang arah, masih labil dan lain lain. Aku minta maaf atas kesalahanku, 
+Aku tau, cara aku ngelakuin semua hal masih salah. Masih hilang arah, masih labil dan lain lain. Aku minta maaf atas kesalahanku, 
 atas kebodohanku juga. Aku sayang dan cinta sama kamu dan aku mau kamu bahagia. Dulu aku mikir aku mau kamu bahagia walaupun
-ga sama aku. Karena aku tau banyak hal yg gasuka menurut bae yang ada di aku. Tapi setengah tahun kulewatin malah aku yang hampir mati. 
-Rada lebay tapi mungkin itu ungkapan yang cocok hehe. Tapi aku udah mulai sadar kok bae, aku mulai benerin diri aku, mulai dari sholat aku,
-sifat ego ku, cara berfikir aku dan lain lain mulai dari sekecil apapun itu.
+ga sama aku. Karena aku tau banyak hal yg gasuka menurut bae yang ada di aku. Tapi setengah tahun kucoba ga sama bae malah aku yang selalu keinget bae.
+aku juga dibeberapa waktu pengin ada bae disitu, pengin foto sama bae waktu aku semhas dll. aku tapi aku belum berani ketemu kamu lagi setelah aku bikin
+kamu nangis pas ulang tahun aku. Aku minta maaf juga buat waktu itu ya ndut. Intinya 6 bulan kemaren aku sangat pengin kamu dateng disidang aku,
+biar aku bisa merayakan dengan orang tercintahh. Rada lebay tapi mungkin itu ungkapan yang cocok hehe. Tapi aku udah mulai sadar kok bae, aku mulai benerin diri aku, mulai dari sholat aku,
+sifat ego ku, cara berfikir aku dan lain lain mulai dari sekecil apapun itu. makanya aku mau minta maaf kalo dulu aku egois ke bae, ga dengerin omongan bae.
 
-Maaf beberapa waktu itu aku ganggu kamu yang sibuk dengan kegiatan mu. Aku gatau kamu sudah mencapai titik benci sama aku atau tidak.
-yang aku tau, aku bisa bikin kamu sayang sama aku, Bagaimanapun caranya, aku mau usahain hal hal itu buat kamu.
-Aku tau kmu tipe orang yang jangan dengerin omongan lain, tapi aku mau denger nantinya klo kamu beruntung punya aku. itu
-adalah satu wishlist yanng aku mau capai dann terus pertahain sama kamu. maaf aku labil, aku sayang sama kamu bey. aku mau kamu yang
-bisa merubah sifat aku ke pribadi yang lebih baik. Bukan cuman sifat tapi pola fikir aku. Aku tau ini egois bey, tapi aku mau kamu yang bilang
-"mau diulang 1000 kalipun aku tetep pilih kamu".
+Maaf beberapa waktu itu aku ganggu kamu yang sibuk dengan kegiatan mu. soalnya aku denger ada yang deketin bae, 
+aku gatau siapa. tapi klo bae ngebuka dan mau pacaran lagi. aku mau berusaha buat dapetin bae lagi. tapi aku bakal lebih terbuka buat diskusi sama bae kalo ada hal yg bae ga suka dari aku.
+Aku gatau kamu sudah mencapai titik benci sama aku atau tidak. yang aku tau, aku bisa bikin kamu sayang sama aku, Bagaimanapun caranya, aku mau usahain hal hal itu buat kamu.
+maaf aku labil, aku sayang sama kamu bey. aku mau kamu yang bisa merubah sifat aku ke pribadi yang lebih baik. Bukan cuman sifat tapi pola fikir aku. Aku tau ini egois bey, tapi aku mau kamu yang bilang
+"mau diulang 1000 kalipun aku tetep pilih kamu" ceilah.
 
 Udah panjang aja yah, sekali lagi aku minta maaf bae. Aku udah jahat sama bae, udah bikin bae nangis, udah bikin bae kesel,
 udah bikin bae bingung dengan aku. Aku sayang kamu, aku mau lebih nemenin kamu setelah ini. Nemenin tiap kerja kerasmu sampai
-diwaktu istirahatmu. Aku gatau kamu mau ketemu aku lagi atau ngga, jadi aku bikin web ini. kasih aku tau keputusanmu dengan hal
-yang ku berikan itu yah. Aku sayang kamu dan aku mau mengusahakan hal hal baik denganmu kedepanya. Orang bilang itu promise ring.
-Tapi aku mau bilang itu adalah bukti kalau aku bertekad mau berusaha berubah untuk lebih baik bersama bae, karena katanya gaboleh janji tapi ku 
-lapisin kalimat tersebut dengan Insya Allah.
+diwaktu istirahatmu. Aku mau kita rapihin bareng bareng hubungan ini. Aku gatau kamu mau ketemu aku lagi atau ngga, jadi aku bikin web ini. 
+kasih aku tau keputusanmu bae. Aku sayang kamu dan aku mau mengusahakan hal hal baik denganmu kedepanya. Orang bilang itu promise ring.
+Tapi aku mau bilang itu adalah bukti kalau aku bertekad mau berusaha berubah untuk lebih baik bersama bae, karena katanya gaboleh janji tapi 
+insyaallah yah.
 
 oiya bae, aku berusaha juga kalo kedepannya lebih banyak hal positif yang akan kita lakuin bareng, aku mau kamu lebih bahagia
 
