feat:adjust text

--- a/wellcome.html
+++ b/wellcome.html
@@ -120,12 +120,13 @@
   <div class="gallery">
     <h2>Ini aku sama bae 📸</h2>
     <img src="img/galeri1.jpg" alt="Galeri 1">
-    <img src="img/galeri2.jpg" alt="Galeri 2">
     <img src="img/galeri3.jpg" alt="Galeri 3">
+    <img src="img/galeri2.jpg" alt="Galeri 2">
+    
   </div>
 
   <div style="margin-top: 30px; text-align: center;">
-    <p style="color: #d63384; font-size: 1.1em;">sekarang sayaang klik link di bawah ini yaa cantikku, aku punya sesuatu buat kamu tapii tunggu lagunyaa beress yaa 💖</p>
+    <p style="color: #d63384; font-size: 1.1em;">sekarang  klik link di bawah ini yaa cantikku, tapi dibacanya sendirii jan sampai ada yang liat selain bae, nanti meledak 💖</p>
     <a href="ucapan.html" class="btn-love">ini sayang ❤️</a>
   </div>
 
