--- a/ucapan.html
+++ b/ucapan.html
@@ -235,13 +235,15 @@ atas kebodohanku juga. Aku sayang dan cinta sama kamu dan aku mau kamu bahagia. 
 ga sama aku. Karena aku tau banyak hal yg gasuka menurut bae yang ada di aku. Tapi setengah tahun kucoba ga sama bae malah aku yang selalu keinget bae.
 aku juga dibeberapa waktu pengin ada bae disitu, pengin foto sama bae waktu aku semhas dll. aku tapi aku belum berani ketemu kamu lagi setelah aku bikin
 kamu nangis pas ulang tahun aku. Aku minta maaf juga buat waktu itu ya ndut. Intinya 6 bulan kemaren aku sangat pengin kamu dateng disidang aku,
-biar aku bisa merayakan dengan orang tercintahh. Rada lebay tapi mungkin itu ungkapan yang cocok hehe. Tapi aku udah mulai sadar kok bae, aku mulai benerin diri aku, mulai dari sholat aku,
-sifat ego ku, cara berfikir aku dan lain lain mulai dari sekecil apapun itu. makanya aku mau minta maaf kalo dulu aku egois ke bae, ga dengerin omongan bae.
+biar aku bisa merayakan dengan orang tercintahh. Rada lebay tapi mungkin itu ungkapan yang cocok hehe. Tapi aku udah mulai sadar kok bae, aku mulai 
+benerin diri aku, mulai dari sholat aku, sifat ego ku, cara berfikir aku dan lain lain mulai dari sekecil apapun itu. makanya aku mau minta maaf kalo dulu 
+aku egois ke bae, ga dengerin omongan bae.
 
 Maaf beberapa waktu itu aku ganggu kamu yang sibuk dengan kegiatan mu. soalnya aku denger ada yang deketin bae, 
-aku gatau siapa. tapi klo bae ngebuka dan mau pacaran lagi. aku mau berusaha buat dapetin bae lagi. tapi aku bakal lebih terbuka buat diskusi sama bae kalo ada hal yg bae ga suka dari aku.
-Aku gatau kamu sudah mencapai titik benci sama aku atau tidak. yang aku tau, aku bisa bikin kamu sayang sama aku, Bagaimanapun caranya, aku mau usahain hal hal itu buat kamu.
-maaf aku labil, aku sayang sama kamu bey. aku mau kamu yang bisa merubah sifat aku ke pribadi yang lebih baik. Bukan cuman sifat tapi pola fikir aku. Aku tau ini egois bey, tapi aku mau kamu yang bilang
+aku gatau siapa. tapi klo bae ngebuka dan mau pacaran lagi. aku mau berusaha buat dapetin bae lagi. tapi aku bakal lebih terbuka buat diskusi 
+sama bae kalo ada hal yg bae ga suka dari aku. Aku gatau kamu sudah mencapai titik benci sama aku atau tidak. yang aku tau, aku bisa bikin kamu 
+sayang sama aku, Bagaimanapun caranya, aku mau usahain hal hal itu buat kamu. maaf aku labil, aku sayang sama kamu bey. aku mau kamu yang bisa 
+merubah sifat aku ke pribadi yang lebih baik. Bukan cuman sifat tapi pola fikir aku. Aku tau ini egois bey, tapi aku mau kamu yang bilang
 "mau diulang 1000 kalipun aku tetep pilih kamu" ceilah.
 
 Udah panjang aja yah, sekali lagi aku minta maaf bae. Aku udah jahat sama bae, udah bikin bae nangis, udah bikin bae kesel,
